--- a/en.html
+++ b/en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -32,9 +32,9 @@
     </head>
 <body>
     
-    <iframe src="CV_Sergei_Ermolaev.pdf">
-        Ваш браузер не поддерживает просмотр PDF. 
-        <a href="CV_Sergei_Ermolaev.pdf">Скачайте резюме по ссылке</a>.
+    <iframe src="Resume_Sergei_Ermolaev.pdf">
+        Your browser does not support viewing PDF. 
+        <a href="Resume_Sergei_Ermolaev.pdf">Download your resume from the link</a>.
     </iframe>
 
 </body>
